--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve --port 8081",
+    "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
@@ -12,11 +12,13 @@
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.5.0",
     "core-js": "^3.6.4",
+    "express": "^4.17.1",
     "install": "^0.13.0",
     "jquery": "^3.4.1",
     "node-sass": "^4.13.1",
     "npm": "^6.14.1",
     "sass-loader": "^8.0.2",
+    "serve-static": "^1.14.1",
     "sweetalert2": "^9.8.2",
     "vue": "^2.6.11",
     "vue-agile": "^1.0.11",
