--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue": "^2.6.11",
     "vue-agile": "^1.0.11",
     "vue-context": "^5.0.0",
+    "vue-core-video-player": "^0.1.4",
     "vue-router": "^3.0.3",
     "vue-sidebar-menu": "^4.5.3",
     "vue-slick": "^1.1.15",
