--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@ckeditor/ckeditor5-vue": "^1.0.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
-    "bootstrap-vue": "^2.5.0",
+    "bootstrap-vue": "^2.12.0",
     "core-js": "^3.6.4",
     "express": "^4.17.1",
     "install": "^0.13.0",
@@ -20,6 +20,8 @@
     "npm": "^6.14.3",
     "sass-loader": "^8.0.2",
     "serve-static": "^1.14.1",
+    "tiptap": "^1.27.0",
+    "tiptap-extensions": "^1.29.0",
     "vue": "^2.6.11",
     "vue-agile": "^1.0.11",
     "vue-context": "^5.0.0",
@@ -41,6 +43,8 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
+    "material-design-icons-iconfont": "^5.0.1",
+    "video.js": "^7.7.5",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
@@ -49,8 +53,7 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
+      "plugin:vue/essential"
     ],
     "parserOptions": {
       "parser": "babel-eslint"
