--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "vuex": "^3.1.2"
   },
   "devDependencies": {
+    "@mdi/font": "^5.1.45",
     "@vue/cli-plugin-babel": "^4.2.0",
     "@vue/cli-plugin-eslint": "^4.2.0",
     "@vue/cli-service": "^4.2.0",
