--- a/package.json
+++ b/package.json
@@ -9,18 +9,22 @@
   },
   "dependencies": {
     "@ckeditor/ckeditor5-vue": "^1.0.1",
+    "apexcharts": "^3.19.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.12.0",
+    "chart.js": "^2.9.3",
     "core-js": "^3.6.4",
     "express": "^4.17.1",
     "install": "^0.13.0",
     "jquery": "^3.4.1",
     "node-sass": "^4.13.1",
     "npm": "^6.14.3",
+    "numeral": "^2.0.6",
     "sass-loader": "^8.0.2",
     "serve-static": "^1.14.1",
     "vue": "^2.6.11",
+    "vue-apexcharts": "^1.5.3",
     "vue-context": "^5.0.0",
     "vue-core-video-player": "^0.1.4",
     "vue-router": "^3.0.3",
